<!--
  ~ Copyright (c) 2015. Annie Hui @ RStar Technology Solutions
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rstar.mobile.csc205sp2015.post.PostActivity" >

    <item
        android:id="@+id/menu_post_signup"
        android:showAsAction="never"
        android:title="@string/menu_post_signup"
        android:icon="@drawable/ic_action_send_now"
        />

    <item
        android:id="@+id/menu_post_signin"
        android:showAsAction="never"
        android:title="@string/menu_post_signin"
        android:icon="@drawable/ic_action_send_now"
        />

    <item
        android:id="@+id/menu_post_reset"
        android:showAsAction="never"
        android:title="@string/menu_post_reset"
        android:icon="@drawable/ic_action_send_now"
        />
    <item
        android:id="@+id/menu_post_passwd"
        android:showAsAction="never"
        android:title="@string/menu_post_passwd"
        android:icon="@drawable/ic_action_send_now"
        />

    <item
        android:id="@+id/menu_post_download"
        android:showAsAction="never"
        android:title="@string/menu_post_download"
        android:icon="@drawable/ic_action_download"
        />

    <item
        android:id="@+id/menu_post_upload"
        android:showAsAction="never"
        android:title="@string/menu_post_upload"
        android:icon="@drawable/ic_action_upload"
        />
    <item
        android:id="@+id/menu_post_score"
        android:showAsAction="never"
        android:title="@string/menu_post_score"
        android:icon="@drawable/ic_action_view_as_list"
        />

    <item
        android:id="@+id/menu_post_feedback"
        android:showAsAction="never"
        android:title="@string/menu_post_feedback"
        android:icon="@drawable/ic_action_view_as_list"
        />
    <item
        android:id="@+id/menu_post_submitted"
        android:showAsAction="never"
        android:title="@string/menu_post_submitted"
        android:icon="@drawable/ic_action_view_as_list"
        />

    <item
        android:id="@+id/menu_post_export"
        android:showAsAction="never"
        android:title="@string/menu_post_export"
        android:icon="@drawable/ic_action_send_now"
        />

</menu>
