<!--
  ~ Copyright (c) 2015. Annie Hui @ RStar Technology Solutions
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rstar.mobile.csc205sp2015.module.ModuleActivity" >

    <item
        android:id="@+id/menu_module_zoomtext"
        android:showAsAction="always"
        android:title="@string/menu_module_zoomtext"
        android:icon="@drawable/ic_zoomtext"
        />

    <item
        android:id="@+id/menu_module_homework"
        android:showAsAction="never"
        android:title="@string/menu_module_homework"
        android:icon="@drawable/ic_action_view_as_list"
        />

    <item
        android:id="@+id/menu_module_search"
        android:showAsAction="never"
        android:title="@string/menu_module_search"
        android:icon="@drawable/ic_action_search"
        />

    <item
        android:id="@+id/menu_module_tools"
        android:showAsAction="never"
        android:title="@string/menu_module_tools"
        android:icon="@drawable/ic_hammar"
        />


    <item
        android:id="@+id/menu_module_help"
        android:showAsAction="never"
        android:title="@string/menu_module_help"
        android:icon="@drawable/ic_action_help"
        />

</menu>
