<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015. Annie Hui @ RStar Technology Solutions
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_login_new"
        android:showAsAction="ifRoom"
        android:title="@string/menu_login_new"
        android:icon="@drawable/ic_action_new_account"
        />
    <item
        android:id="@+id/menu_login_existing"
        android:showAsAction="ifRoom"
        android:title="@string/menu_login_existing"
        android:icon="@drawable/ic_action_accounts"
        />
    <item
        android:id="@+id/menu_login_passwd"
        android:showAsAction="ifRoom"
        android:title="@string/menu_login_passwd"
        android:icon="@drawable/ic_passwd"
        />
    <item
        android:id="@+id/menu_login_reset"
        android:showAsAction="ifRoom"
        android:title="@string/menu_login_reset"
        android:icon="@drawable/ic_pass_reset"
        />

</menu>