<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015. Annie Hui @ RStar Technology Solutions
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout 
        android:id="@+id/fragmentLogin_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@color/background_light"
        >
        <TextView
            android:id="@+id/fragmentLogin_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize_normal"
            android:textColor="@color/text_dark"
            android:textStyle="bold"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/fragmentLogin_userId_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="@dimen/textsize_normal"
            android:textColor="@color/text_dark"
            android:text="@string/api_userId"
            />
    
        <EditText
            android:id="@+id/fragmentLogin_userId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:padding="1dp"
            android:inputType="text"
            android:maxLength="32"
            android:background="@color/background_white"
            android:textColor="@color/text_dark"
            />

        <TextView
            android:id="@+id/fragmentLogin_email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="@dimen/textsize_normal"
            android:textColor="@color/text_dark"
            android:text="@string/api_email"
            />

        <EditText
            android:id="@+id/fragmentLogin_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:padding="1dp"
            android:inputType="text"
            android:maxLength="100"
            android:background="@color/background_white"
            android:textColor="@color/text_dark"
            />

        <TextView
            android:id="@+id/fragmentLogin_password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="@dimen/textsize_normal"
            android:textColor="@color/text_dark"
            android:text="@string/api_password"
            />

        <EditText
            android:id="@+id/fragmentLogin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:padding="1dp"
            android:inputType="text"
            android:maxLength="20"
            android:background="@color/background_white"
            android:textColor="@color/text_dark"
            />

        <TextView
            android:id="@+id/fragmentLogin_newpassword_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="@dimen/textsize_normal"
            android:textColor="@color/text_dark"
            android:text="@string/api_newpassword"
            />

        <EditText
            android:id="@+id/fragmentLogin_newpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:padding="1dp"
            android:inputType="text"
            android:maxLength="20"
            android:background="@color/background_white"
            android:textColor="@color/text_dark"
            />

        <Button
            android:id="@+id/fragmentLogin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_submit"
            android:layout_gravity="center"
            />
    
    </LinearLayout>
    
                
</ScrollView>
